base/rollout-blue-green.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: vote-staging
    tier: front
  name: vote-blue-green
  namespace: staging
spec:
  replicas: 4
  selector:
    matchLabels:
      app: vote-staging
  strategy:
    blueGreen:
      autoPromotionEnabled: false
      activeService: vote-staging
      previewService: vote-preview
  template:
    metadata:
      labels:
        app: vote-staging
        tier: front
    spec:
      containers:
      - image: schoolofdevops/vote:v7
        name: vote-staging
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
