base/rollout-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: vote
    tier: front
  name: vote-canary
  namespace: prod
spec:
  replicas: 4
  selector:
    matchLabels:
      app: vote
  strategy:
    blueGreen: null
    canary:
      steps:
        - setWeight: 20
        - pause:
            duration: 10s
        - setWeight: 40
        - pause:
            duration: 10s
        - setWeight: 60
        - pause:
            duration: 10s
        - setWeight: 80
        - pause:
            duration: 10s
        - setWeight: 100
  template:
    metadata:
      labels:
        app: vote
        tier: front
    spec:
      containers:
        - image: schoolofdevops/vote:v9
          name: vote
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
