base/preview-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vote-preview
  labels:
    role: vote-staging
spec:
  selector:
    app: vote-staging
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
