base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote-staging
    tier: front
  name: vote-staging
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vote-staging
  type: ClusterIP
