base/ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress-prod
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: prod.techgur.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
    - host: prod-preview.techgur.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-preview
                port:
                  number: 80
